--- a/Array(part 1)/majorityelement/.vscode/settings.json
+++ b/Array(part 1)/majorityelement/.vscode/settings.json
@@ -1,95 +1,94 @@
 {
-    // 🔤 Typography & Readability
-    // Configure how the editor looks in terms of text and spacing
-    "editor.fontSize": 20,                              // Text size in the editor
-    "editor.fontFamily": "Cascadia Code, Fira Code, JetBrains Mono", // Fonts for the editor
-    "editor.fontLigatures": "'ss01', 'ss02', 'calt'",  // Enable font ligatures for improved readability
-    "editor.lineHeight": 26,                           // Space between lines
-    "editor.letterSpacing": 0.5,                       // Adjust spacing between letters
-    "editor.fontWeight": "450",                        // Weight of the font for a balanced look
-  
-    // 🚀 Performance Optimization
-    // Settings to make VS Code faster and cleaner
-    "editor.minimap.enabled": false,                   // Disable the minimap for better performance
-    "editor.lineNumbers": "relative",                  // Show relative line numbers for easier navigation
-    "editor.renderLineHighlight": "gutter",            // Highlight the line number of the current line
-    "workbench.editor.enablePreview": false,           // Open files directly instead of preview mode
-  
-    // 🎨 UI Customization
-    // Personalize the look and feel of the editor
-    "workbench.colorTheme": "One Dark Pro Flat",       // Set a dark theme for the editor
-    "workbench.iconTheme": "material-icon-theme",      // Use modern icons for files and folders
-    "workbench.sideBar.location": "left",              // Sidebar on the left for easy access
-    "workbench.statusBar.visible": true,               // Show the status bar at the bottom
-    "workbench.activityBar.location": "default",       // Keep the activity bar in its default location
-  
-    // 📁 File Management
-    // Automatically handle and clean up files
-    "files.autoSave": "afterDelay",                    // Save files automatically after a short delay
-    "files.autoSaveDelay": 1000,                       // Delay in milliseconds before auto-save
-    "files.trimTrailingWhitespace": true,              // Remove unnecessary spaces at the end of lines
-    "files.insertFinalNewline": true,                  // Ensure files end with a blank line
-    "files.exclude": {                                 // Exclude unwanted files and folders from the explorer
-      "**/.git": true,
-      "**/.svn": true,
-      "**/.hg": true,
-      "**/CVS": true,
-      "**/.DS_Store": true,
-      "**/Thumbs.db": true
-    },
-  
-    // 🔍 Search Optimization
-    // Improve the search experience by excluding unnecessary folders
-    "search.exclude": {
-      "**/node_modules": true,                         // Exclude node_modules
-      "**/dist": true,                                 // Exclude build output directories
-      "**/build": true,
-      "**/vendor": true,
-      "**/.next": true,                                // Exclude Next.js build files
-      "**/.nuxt": true                                 // Exclude Nuxt.js build files
-    },
-  
-    // 💻 Coding Experience
-    // Enhance your coding productivity and editor behavior
-    "editor.formatOnSave": true,                       // Automatically format code when saving
-    "editor.formatOnType": true,                       // Format code as you type
-    "editor.linkedEditing": true,                      // Simultaneously edit matching tags
-    "editor.wordWrap": "on",                           // Wrap long lines automatically
-    "editor.guides.indentation": false,                // Disable indentation guides
-    "editor.renderWhitespace": "boundary",             // Highlight only boundary whitespace
-    "editor.cursorBlinking": "smooth",                 // Smooth cursor blinking animation
-    "editor.cursorSmoothCaretAnimation": "on",         // Enable smooth movement of the cursor
-  
-    // 🧠 Intelligence & Suggestions
-    // Configure IntelliSense for better coding assistance
-    "editor.quickSuggestions": {                       // Enable suggestions for code elements
-      "comments": false,                               // Disable suggestions in comments
-      "strings": true,                                 // Enable suggestions in strings
-      "other": true                                    // Enable suggestions for other code
-    },
-    "editor.suggestSelection": "first",                // Automatically select the first suggestion
-    "editor.snippetSuggestions": "top",                // Show code snippets at the top of suggestions
-  
-    // 🌐 Language & Emmet Support
-    // Add Emmet and language-specific customizations
-    "emmet.includeLanguages": {
-      "vue-html": "html",                              // Treat Vue files as HTML for Emmet
-      "blade": "html",                                 // Enable Emmet in Blade templates
-      "react": "html",                                 // Enable Emmet in React files
-      "javascript": "html"                             // Use Emmet in JavaScript files
-    },
-  
-    // 🖥️ Terminal Enhancements
-    // Customize the terminal experience
-    "terminal.integrated.fontSize": 14,                // Font size in the terminal
-    "terminal.integrated.lineHeight": 1.4,             // Line spacing in the terminal
-    "terminal.integrated.cursorStyle": "line",         // Cursor style in the terminal
-    "terminal.integrated.cursorBlinking": true,        // Enable cursor blinking in the terminal
-  
-    // 🔒 Security & Performance
-    // Ensure a secure and efficient workspace
-    "security.workspace.trust.untrustedFiles": "open", // Allow opening untrusted files
-    "typescript.updateImportsOnFileMove.enabled": "always", // Auto-update imports on TypeScript file moves
-    "javascript.updateImportsOnFileMove.enabled": "always"  // Auto-update imports on JavaScript file moves
-  }
-  
+  // 🔤 Typography & Readability
+  // Customize the appearance of text in the editor for better readability
+  "editor.fontSize": 20,                              // Set the text size in the editor
+  "editor.fontFamily": "Cascadia Code, Fira Code, JetBrains Mono", // Choose modern, monospaced fonts
+  "editor.fontLigatures": "'ss01', 'ss02', 'calt'",  // Enable ligatures for improved aesthetics
+  "editor.lineHeight": 26,                           // Define line spacing for better text flow
+  "editor.letterSpacing": 0.5,                       // Add slight spacing between letters
+  "editor.fontWeight": "450",                        // Set text weight for a balanced appearance
+
+  // 🚀 Performance Optimization
+  // Disable unnecessary features to enhance speed and responsiveness
+  "editor.minimap.enabled": false,                   // Turn off the minimap for less distraction
+  "editor.lineNumbers": "relative",                  // Show relative line numbers for quick navigation
+  "editor.renderLineHighlight": "gutter",            // Highlight the gutter for the active line
+  "workbench.editor.enablePreview": false,           // Open files directly, not in preview mode
+
+  // 🎨 UI Customization
+  // Adjust VS Code's look and feel to suit your preferences
+  "workbench.colorTheme": "One Dark Pro Flat",       // Apply a dark, visually appealing theme
+  "workbench.iconTheme": "material-icon-theme",      // Use modern icons for files and folders
+  "workbench.sideBar.location": "left",              // Place the sidebar on the left
+  "workbench.statusBar.visible": true,               // Keep the status bar visible for key info
+  "workbench.activityBar.location": "default",       // Default activity bar placement
+
+  // 📁 File Management
+  // Automate and optimize how files are handled
+  "files.autoSave": "afterDelay",                    // Save changes automatically after a short delay
+  "files.autoSaveDelay": 1000,                       // Delay before saving files (in milliseconds)
+  "files.trimTrailingWhitespace": true,              // Remove extra spaces at the end of lines
+  "files.insertFinalNewline": true,                  // Ensure a final newline is added to all files
+  "files.exclude": {                                 // Hide unwanted files/folders in the explorer
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true
+  },
+
+  // 🔍 Search Optimization
+  // Exclude unnecessary folders from search to improve focus and speed
+  "search.exclude": {
+    "**/node_modules": true,                         // Exclude dependencies folder
+    "**/dist": true,                                 // Exclude build output folders
+    "**/build": true,
+    "**/vendor": true,                               // Exclude vendor libraries
+    "**/.next": true,                                // Ignore Next.js build files
+    "**/.nuxt": true                                 // Ignore Nuxt.js build files
+  },
+
+  // 💻 Coding Experience
+  // Fine-tune coding-related settings for better productivity
+  "editor.formatOnSave": true,                       // Automatically format code when saving
+  "editor.formatOnType": true,                       // Format code as you type
+  "editor.linkedEditing": true,                      // Edit opening and closing tags simultaneously
+  "editor.wordWrap": "on",                           // Wrap long lines for better visibility
+  "editor.guides.indentation": false,                // Hide indentation guides for a cleaner look
+  "editor.renderWhitespace": "boundary",             // Show only boundary whitespace characters
+  "editor.cursorBlinking": "smooth",                 // Use a smooth blinking cursor animation
+  "editor.cursorSmoothCaretAnimation": "on",         // Enable smooth movement of the cursor
+
+  // 🧠 IntelliSense & Suggestions
+  // Configure the editor's code assistance for a smarter experience
+  "editor.quickSuggestions": {                       // Enable IntelliSense suggestions
+    "comments": false,                               // Disable suggestions inside comments
+    "strings": true,                                 // Enable suggestions in strings
+    "other": true                                    // Enable suggestions for other code elements
+  },
+  "editor.suggestSelection": "first",                // Auto-select the first suggestion
+  "editor.snippetSuggestions": "top",                // Show code snippets at the top of suggestions
+
+  // 🌐 Language & Emmet Support
+  // Enable additional language and Emmet functionalities
+  "emmet.includeLanguages": {
+    "vue-html": "html",                              // Treat Vue files as HTML for Emmet
+    "blade": "html",                                 // Enable Emmet in Blade templates
+    "react": "html",                                 // Enable Emmet in React files
+    "javascript": "html"                             // Use Emmet in JavaScript files
+  },
+
+  // 🖥️ Terminal Customization
+  // Improve the integrated terminal's usability
+  "terminal.integrated.fontSize": 14,                // Set terminal font size
+  "terminal.integrated.lineHeight": 1.4,             // Adjust terminal line spacing
+  "terminal.integrated.cursorStyle": "line",         // Use a line cursor style
+  "terminal.integrated.cursorBlinking": true,        // Enable blinking cursor in the terminal
+
+  // 🔒 Security & Workspace
+  // Ensure security while maintaining smooth operations
+  "security.workspace.trust.untrustedFiles": "open", // Open untrusted files without prompts
+  "typescript.updateImportsOnFileMove.enabled": "always", // Auto-update imports when moving TypeScript files
+  "javascript.updateImportsOnFileMove.enabled": "always"  // Auto-update imports when moving JavaScript files
+}
